[gd_scene load_steps=31 format=2]

[ext_resource path="res://resources/font/Arcadepix Plus.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://scenes/user_profile/yellow_bg.png" type="Texture" id=2]
[ext_resource path="res://scenes/user_profile/buttons and panels/button2..png" type="Texture" id=3]
[ext_resource path="res://scenes/user_profile/edit_icon.png" type="Texture" id=4]
[ext_resource path="res://scenes/user_profile/user_profile.gd" type="Script" id=5]
[ext_resource path="res://scenes/user_profile/avatar_boy_picture/default_character.png" type="Texture" id=6]
[ext_resource path="res://scenes/user_profile/BSU_bg.png" type="Texture" id=7]
[ext_resource path="res://scenes/user_profile/buttons and panels/button1..png" type="Texture" id=8]
[ext_resource path="res://scenes/user_profile/bg_spriteSheet.png" type="Texture" id=9]
[ext_resource path="res://scenes/user_profile/buttons and panels/crown.png" type="Texture" id=10]
[ext_resource path="res://scenes/user_profile/buttons and panels/panel.png" type="Texture" id=11]
[ext_resource path="res://scenes/user_profile/background_animation.tres" type="Animation" id=12]
[ext_resource path="res://scenes/user_profile/buttons and panels/arrow.png" type="Texture" id=13]
[ext_resource path="res://scenes/user_profile/podium.png" type="Texture" id=14]
[ext_resource path="res://scenes/user_profile/change_avatar.gd" type="Script" id=15]
[ext_resource path="res://inventory_system/resources/font/font_14.tres" type="DynamicFont" id=16]
[ext_resource path="res://resources/font/button.tres" type="DynamicFont" id=17]

[sub_resource type="DynamicFont" id=8]
size = 50
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=9]
size = 30
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=7]
size = 200
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=10]
size = 40
font_data = ExtResource( 1 )

[sub_resource type="Theme" id=4]

[sub_resource type="DynamicFont" id=13]
size = 50
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=6]
size = 40
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=14]
size = 140
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=1]
size = 100
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=15]
size = 60
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 80
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=16]
size = 200
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=5]
size = 140
font_data = ExtResource( 1 )

[node name="user_profile" type="Node2D"]
script = ExtResource( 5 )

[node name="user_profile" type="CanvasLayer" parent="."]

[node name="name_background" type="NinePatchRect" parent="user_profile"]
margin_left = 63.0
margin_top = 98.0
margin_right = 643.0
margin_bottom = 759.0
rect_scale = Vector2( 1.67296, 1.4533 )
texture = ExtResource( 11 )

[node name="name" type="Label" parent="user_profile/name_background"]
margin_left = -4.0
margin_top = -1.0
margin_right = 576.0
margin_bottom = 143.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 8 )
text = "User_name"
align = 1
valign = 1

[node name="rank" type="Label" parent="user_profile/name_background"]
margin_left = 238.0
margin_top = 102.0
margin_right = 301.0
margin_bottom = 127.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 9 )
text = "rank:"

[node name="edit_avatar" type="Button" parent="user_profile/name_background"]
modulate = Color( 0, 0, 0, 1 )
margin_left = 348.0
margin_top = 586.0
margin_right = 2053.0
margin_bottom = 1104.0
rect_scale = Vector2( 0.133652, 0.130285 )
custom_fonts/font = SubResource( 7 )
text = "Change avatar"
icon = ExtResource( 4 )
flat = true
icon_align = 2

[node name="character_bg" type="TextureRect" parent="user_profile/name_background"]
margin_left = 56.0
margin_top = 147.0
margin_right = 556.0
margin_bottom = 648.0
rect_scale = Vector2( 0.859738, 0.835239 )
texture = ExtResource( 7 )

[node name="avatar" type="Sprite" parent="user_profile/name_background"]
position = Vector2( 275, 359 )
scale = Vector2( 1.33518, 1.2624 )
texture = ExtResource( 6 )

[node name="skill_mastery_bg" type="NinePatchRect" parent="user_profile"]
margin_left = 1081.0
margin_top = 105.0
margin_right = 1686.0
margin_bottom = 493.0
rect_scale = Vector2( 1.25687, 1.52258 )
texture = ExtResource( 11 )

[node name="border" type="Sprite" parent="user_profile"]
position = Vector2( 1470, 111 )
scale = Vector2( 0.460972, 0.172785 )
texture = ExtResource( 2 )

[node name="Skill Mastery" type="Label" parent="user_profile"]
margin_left = 1284.0
margin_top = 86.0
margin_right = 1573.0
margin_bottom = 128.0
rect_scale = Vector2( 1.26352, 1.68121 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 10 )
text = "Knowledge Obtain"

[node name="router_progress" type="ProgressBar" parent="user_profile"]
margin_left = 1457.0
margin_top = 245.0
margin_right = 1755.0
margin_bottom = 294.0
rect_scale = Vector2( 1.20649, 1.7043 )
theme = SubResource( 4 )
value = 30.0
rounded = true

[node name="router_skills" type="Label" parent="user_profile"]
margin_left = 1130.0
margin_top = 254.0
margin_right = 1427.0
margin_bottom = 321.0
rect_scale = Vector2( 1.05001, 1.62573 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 16 )
text = "Networking 1"

[node name="term_progress" type="ProgressBar" parent="user_profile"]
margin_left = 1465.0
margin_top = 393.0
margin_right = 1763.0
margin_bottom = 442.0
rect_scale = Vector2( 1.17865, 1.82219 )
theme = SubResource( 4 )
value = 50.0
rounded = true

[node name="networking_term" type="Label" parent="user_profile"]
margin_left = 1119.0
margin_top = 413.0
margin_right = 1389.0
margin_bottom = 446.0
rect_scale = Vector2( 0.963552, 1.77096 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 16 )
text = "Networking 2"

[node name="crowns" type="NinePatchRect" parent="user_profile"]
margin_left = 1138.0
margin_top = 712.0
margin_right = 1740.0
margin_bottom = 811.0
rect_scale = Vector2( 1.09176, 1.65724 )
texture = ExtResource( 11 )

[node name="crowns" type="Label" parent="user_profile/crowns"]
margin_left = 28.0
margin_top = 30.0
margin_right = 392.0
margin_bottom = 69.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 13 )
text = "Crowns collected:"
align = 1
valign = 1

[node name="crowns2" type="Sprite" parent="user_profile/crowns"]
position = Vector2( 506, 48 )
scale = Vector2( 0.120753, 0.142504 )
texture = ExtResource( 10 )

[node name="logout_bg" type="NinePatchRect" parent="user_profile"]
margin_left = 1175.0
margin_top = 914.0
margin_right = 1772.0
margin_bottom = 1047.0
texture = ExtResource( 3 )

[node name="logout_btn" type="Button" parent="user_profile/logout_bg"]
self_modulate = Color( 0, 0, 0, 1 )
light_mask = 514
margin_left = 1.0
margin_top = 5.0
margin_right = 600.0
margin_bottom = 126.0
custom_fonts/font = SubResource( 6 )
text = "Log out"
flat = true

[node name="back_btn" type="Button" parent="user_profile"]
margin_left = 12.0
margin_top = 6.0
margin_right = 762.0
margin_bottom = 492.0
rect_scale = Vector2( 0.279956, 0.170022 )
custom_fonts/font = SubResource( 14 )
text = "home"
icon = ExtResource( 13 )
flat = true
clip_text = true
icon_align = 1

[node name="background" type="Sprite" parent="."]
position = Vector2( 963, 546.5 )
scale = Vector2( 1.08, 1.20066 )
texture = ExtResource( 9 )
hframes = 9

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/background_animation = ExtResource( 12 )

[node name="edit_avatar" type="CanvasLayer" parent="."]
visible = false
script = ExtResource( 15 )

[node name="current_avatar_bg" type="TextureRect" parent="edit_avatar"]
margin_left = 80.0
margin_top = 182.0
margin_right = 875.0
margin_bottom = 952.0
rect_scale = Vector2( 1.08791, 1.1208 )
texture = ExtResource( 11 )

[node name="2_bg" type="TextureRect" parent="edit_avatar"]
margin_left = 58.0
margin_top = 96.0
margin_right = 1245.0
margin_bottom = 1176.0
rect_scale = Vector2( 0.77065, 0.910073 )
texture = ExtResource( 2 )
stretch_mode = 1

[node name="current_avatar2" type="Label" parent="edit_avatar"]
margin_left = 315.0
margin_top = 305.0
margin_right = 957.0
margin_bottom = 381.0
rect_scale = Vector2( 0.539645, 0.958181 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 1 )
text = "Current Avatar"
align = 1

[node name="c_avatar_name" type="Label" parent="edit_avatar"]
margin_left = 295.0
margin_top = 905.0
margin_right = 779.0
margin_bottom = 951.0
rect_scale = Vector2( 0.801568, 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 15 )
text = "Default Character"
align = 1
valign = 1
autowrap = true

[node name="select_avatar" type="TextureRect" parent="edit_avatar"]
margin_left = 973.0
margin_top = 56.0
margin_right = 1760.0
margin_bottom = 826.0
rect_scale = Vector2( 1.15584, 1.26814 )
texture = ExtResource( 11 )

[node name="podium" type="TextureRect" parent="edit_avatar"]
margin_left = 248.0
margin_top = 752.0
margin_right = 1520.0
margin_bottom = 1011.0
rect_scale = Vector2( 0.418795, 0.535936 )
texture = ExtResource( 14 )

[node name="2_bg2" type="TextureRect" parent="edit_avatar"]
modulate = Color( 0.996078, 1, 0.92549, 1 )
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 950.0
margin_top = -26.0
margin_right = 1130.0
margin_bottom = 481.0
rect_scale = Vector2( 0.901038, 1.0162 )
texture = ExtResource( 2 )

[node name="right" type="Button" parent="edit_avatar"]
margin_left = 1772.0
margin_top = 483.0
margin_right = 2522.0
margin_bottom = 1001.0
rect_scale = Vector2( -0.182147, 0.183535 )
icon = ExtResource( 13 )
flat = true

[node name="left" type="Button" parent="edit_avatar"]
margin_left = 1084.0
margin_top = 576.0
margin_right = 1834.0
margin_bottom = 1094.0
rect_rotation = 179.743
rect_scale = Vector2( -0.190029, 0.18044 )
icon = ExtResource( 13 )
flat = true

[node name="border_bg" type="Sprite" parent="edit_avatar"]
position = Vector2( 1438, 108 )
scale = Vector2( 0.410586, 0.150125 )
texture = ExtResource( 2 )

[node name="avatar_name" type="Label" parent="edit_avatar"]
margin_left = 1218.0
margin_top = 207.0
margin_right = 1723.0
margin_bottom = 324.0
rect_scale = Vector2( 0.840882, 0.971448 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 17 )
text = "Default Character"
align = 1
autowrap = true

[node name="select_avatar_text" type="Label" parent="edit_avatar"]
margin_left = 1326.0
margin_top = 67.0
margin_right = 1792.0
margin_bottom = 190.0
rect_scale = Vector2( 0.470641, 0.638737 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 2 )
text = "Select Avatar"
align = 1
valign = 1

[node name="select_btn" type="Button" parent="edit_avatar"]
margin_left = 1315.0
margin_top = 942.0
margin_right = 2239.0
margin_bottom = 1200.0
rect_scale = Vector2( 0.234231, 0.364656 )
custom_fonts/font = SubResource( 16 )
text = "Select"
icon = ExtResource( 8 )
clip_text = true
icon_align = 1

[node name="back_btn2" type="Button" parent="edit_avatar"]
margin_left = 9.0
margin_top = 14.0
margin_right = 759.0
margin_bottom = 500.0
rect_scale = Vector2( 0.307402, 0.247193 )
custom_fonts/font = SubResource( 5 )
text = "Back"
icon = ExtResource( 13 )
flat = true
clip_text = true
icon_align = 1

[node name="podium2" type="TextureRect" parent="edit_avatar"]
margin_left = 1133.0
margin_top = 731.0
margin_right = 2405.0
margin_bottom = 990.0
rect_scale = Vector2( 0.476923, 0.599623 )
texture = ExtResource( 14 )

[node name="current_avatar" type="Sprite" parent="edit_avatar"]
position = Vector2( 517, 590 )
scale = Vector2( 1.09529, 1.09278 )
texture = ExtResource( 6 )

[node name="avatar_selection" type="Sprite" parent="edit_avatar"]
position = Vector2( 1433, 570 )
scale = Vector2( 1.18297, 1.06684 )
texture = ExtResource( 6 )

[connection signal="pressed" from="user_profile/name_background/edit_avatar" to="." method="_on_edit_avatar_pressed"]
[connection signal="pressed" from="user_profile/back_btn" to="." method="_on_back_btn_pressed"]
[connection signal="pressed" from="edit_avatar/right" to="edit_avatar" method="_on_right_pressed"]
[connection signal="pressed" from="edit_avatar/left" to="edit_avatar" method="_on_left_pressed"]
[connection signal="pressed" from="edit_avatar/select_btn" to="edit_avatar" method="_on_select_btn_pressed"]
[connection signal="pressed" from="edit_avatar/back_btn2" to="edit_avatar" method="_on_back_btn2_pressed"]
